--- a/ToDo.Web/Pages/ToDoItemPages/ToDoItemDetails.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/ToDoItemDetails.razor
@@ -36,6 +36,7 @@ else
         <div class="">
             <a href="EditToDoItem/@Id" class="btn btn-secondary">Edit ToDo</a>
             <a href="#" class="btn btn-success">Back</a>
+            <button class="btn btn-danger" @onclick="DeleteToDo">Delete</button>
         </div>
     </div>
 }
