--- a/ToDo.Web/Pages/ToDoItemPages/ToDoItemDetails.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/ToDoItemDetails.razor
@@ -1,4 +1,6 @@
 ﻿@page "/ToDoItemDetails/{Id:int}"
+@using ToDo.Web.Pages.ToDoItemPages.Modals
+
 @inherits ToDoItemDetailsBase
 
 @if(ToDoItemDto == null && ErrorMessage == null)
@@ -36,7 +38,44 @@ else
         <div class="">
             <a href="EditToDoItem/@Id" class="btn btn-secondary">Edit ToDo</a>
             <a href="#" class="btn btn-success">Back</a>
-            <button class="btn btn-danger" @onclick="DeleteToDo">Delete</button>
+            <button class="btn btn-danger" @onclick="ShowModal">Delete</button>
         </div>
     </div>
+}
+
+@if (showModal)
+{
+        <div class="modal" tabindex="-1" style="display: block;">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Confirmation</h5>
+                        <button type="button" class="btn btn-outline-secondary close" @onclick="HideModal">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" @onclick="HideModal">Cancel</button>
+                    <button type="button" class="btn btn-danger" @onclick="DeleteToDo">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+}
+
+@code {
+    private bool showModal = false;
+
+    private void ShowModal()
+    {
+        showModal = true;
+    }
+
+    private void HideModal()
+    {
+        showModal = false;
+    }
 }
