--- a/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
@@ -17,6 +17,6 @@
     </div>
     <div class="card-footer">
         <button class="btn btn-primary" @onclick="SaveToDo">Save</button>
-        <a class="btn btn-secondary" href="ToDoItemDetails/@Id">Back</a>
+        <a class="btn btn-secondary" href="/">Back</a>
     </div>
 </div>
