--- a/ToDo.Web/Pages/ToDoItemPages/AddToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/AddToDoItem.razor
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <input id="description" class="form-control" placeholder="Description" @bind="description" />
+            <textarea id="description" class="form-control" placeholder="Description" @bind="description" />
         </div>
     </div>
     <div class="card-footer">
