--- a/ToDo.Web/Shared/MainLayout.razor
+++ b/ToDo.Web/Shared/MainLayout.razor
@@ -5,7 +5,7 @@
         <NavMenu />
     </div>
 
-    <main>
+    <main class="main">
         <article class="content px-4">
             @Body
         </article>
