--- a/ToDo.Web/Shared/NavMenu.razor
+++ b/ToDo.Web/Shared/NavMenu.razor
@@ -11,17 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="bi bi-check2-square px-1" aria-hidden="true"></span><span class="px-1">TODO List</span>
             </NavLink>
         </div>
     </nav>
