--- a/ToDo.Web/Pages/ToDoItemPages/DisplayToDoItems.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/DisplayToDoItems.razor
@@ -10,10 +10,13 @@
 <div class="row flex-xl-row flex-column">
     @foreach (Api.Shared.Enums.ToDoItemStatus status in Enum.GetValues(typeof(Api.Shared.Enums.ToDoItemStatus)))
     {
-        <div class="col border border-2 rounded my-1 mx-xl-1">
-            <div class="border border-2 rounded my-2">
+        <div class="col my-1 mx-xl-1">
+            <Collapse IsAccordion="true">
+                <CollapseItems>
+            @*<div class="border border-2 rounded my-2">
                 <p class="p-2 mb-0 fs-6 text-white">@status</p>
-            </div>
+            </div>*@
+            <CollapseItem Text="@status.ToString()">
             @foreach (var item in FilteredStatus(status))
             {
                 <Card IsCollapsible="true" class="mb-2" HeaderText="@item.Name" Collapsed="true" IsShadow="true">
@@ -42,21 +45,24 @@
                             <div class="d-flex justify-content-between gap-2">
                                 @if (item.Status != Api.Shared.Enums.ToDoItemStatus.New)
                                 {
-                                    <h4 class="m-0"><a class="btn-sm btn btn-outline-danger" @onclick="() => ChangeStatus(item.Id, directionDown)">Undo</a></h4>
+                                    <h4 class="m-0"><Button Color="Color.Danger" IsOutline="true" OnClick="() => ChangeStatus(item.Id, directionDown)">Undo</Button></h4>
                                 }
                                 @if (item.Status == Api.Shared.Enums.ToDoItemStatus.InProgress)
                                 {
-                                    <h4 class="m-0"><a class="btn-sm btn btn-success" @onclick="() => ChangeStatus(item.Id, directionUp)">Complete</a></h4>
+                                    <h4 class="m-0"><Button Color="Color.Success" OnClick="() => ChangeStatus(item.Id, directionUp)">Complete</Button></h4>
                                 }
                                 @if (item.Status == Api.Shared.Enums.ToDoItemStatus.New)
                                 {
-                                    <h4 class="m-0"><a class="btn-sm btn btn-outline-success" @onclick="() => ChangeStatus(item.Id, directionUp)">Start TODO</a></h4>
+                                    <h4 class="m-0"><Button Color="Color.Success" IsOutline="true" OnClick="() => ChangeStatus(item.Id, directionUp)">Start TODO</Button></h4>
                                 }
                             </div>
                         </div>
                     </FooterTemplate>
                 </Card>
             }
+                    </CollapseItem>
+            </CollapseItems>
+            </Collapse>
         </div>
     }
 </div>
