--- a/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
@@ -8,11 +8,11 @@
     <div class="card-body d-flex flex-column gap-3">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" placeholder="Name" id="name" @bind="name" />
+            <BootstrapInput  type="text" class="form-control" PlaceHolder="Name" id="name" @bind-Value="name" />
         </div>
         <div class="form-group">
             <label for="description">Description</label>
-            <input id="description" class="form-control" placeholder="Description" @bind="description" />
+            <Textarea id="description" class="form-control" placeholder="Description" rows="2" @bind-Value="description" />
         </div>
     </div>
     <div class="card-footer">
