--- a/ToDo.Web/Pages/ToDoItemPages/ToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/ToDoItem.razor
@@ -3,10 +3,8 @@
 
 @if(ToDoItemDtos == null)
 {
-    <div class="vh-100 d-flex justify-content-center align-items-center">
-        <div class="spinner-border text-success" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <Spinner Color="Color.Light" Size="Size.ExtraLarge" SpinnerType="SpinnerType.Border"></Spinner>
     </div>
 }
 else
@@ -23,7 +21,7 @@ else
         <div class="">
             @if (toDoItemsCount > 0)
             {
-                    <DisplayToDoItems ToDoItemDtos="@ToDoItemDtos" />
+                <DisplayToDoItems ToDoItemDtos="@ToDoItemDtos" />
             }
         </div>
     </div>
