--- a/ToDo.Web/Pages/ToDoItemPages/ToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/ToDoItem.razor
@@ -4,7 +4,7 @@
 @if(ToDoItemDtos == null)
 {
     <div class="d-flex justify-content-center align-items-center vh-100">
-        <Spinner Color="Color.Light" Size="Size.ExtraLarge" SpinnerType="SpinnerType.Border"></Spinner>
+        <Spinner Color="Color.Light" Size="Size.Large" SpinnerType="SpinnerType.Border"></Spinner>
     </div>
 }
 else
