--- a/ToDo.Web/Pages/ToDoItemPages/DisplayToDoItems.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/DisplayToDoItems.razor
@@ -5,6 +5,7 @@
 @{
     string directionUp = "up";
     string directionDown = "down";
+    int count = 1;
 }
 
 <div class="row flex-xl-row flex-column">
@@ -21,6 +22,13 @@
                                     <div class="fw-bold mb-2">
                                         @item.Description
                                     </div>
+                                        @foreach (var checkbox in item.Checkboxes)
+                                        {
+                                            <div>
+                                                <input type="checkbox" checked="@checkbox.IsChecked" @onchange="async () => await UpdateCheckbox(item.Id, checkbox.Id)"/>
+                                                <span class="pl-2">@checkbox.Description</span>
+                                            </div>
+                                        }
                                     <div>
                                         <div>
                                             <span class="text-secondary">Status new:</span> @item.StatusNew
