--- a/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
@@ -8,12 +8,24 @@
     <div class="card-body d-flex flex-column gap-3">
         <div class="form-group">
             <label for="name">Name</label>
-            <BootstrapInput  type="text" class="form-control" PlaceHolder="Name" id="name" @bind-Value="name" />
+            <BootstrapInput type="text" class="form-control" PlaceHolder="Name" id="name" @bind-Value="name" />
         </div>
         <div class="form-group">
             <label for="description">Description</label>
             <Textarea id="description" class="form-control" placeholder="Description" rows="2" @bind-Value="description" />
         </div>
+        <div>
+            <button class="btn btn-secondary btn-sm mt-2" @onclick="AddCheckbox">Add Checkbox</button>
+        </div>
+        @foreach (var checkbox in checkboxes)
+        {
+            <label class="form-label m-0">Checkbox #</label>
+            <div class="d-flex flex-row">
+                <input class="form-check-inline" type="checkbox" checked="@checkbox.IsChecked" />
+                <input class="form-control w-25" type="text" @bind="@checkbox.Description" />
+                <button class="btn btn-danger btn-sm" @onclick="() => RemoveCheckbox(checkbox)">Remove</button>
+            </div>
+        }
     </div>
     <div class="card-footer">
         <button class="btn btn-primary" @onclick="SaveToDo">Save</button>
