--- a/ToDo.Web/Pages/ToDoItemPages/AddToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/AddToDoItem.razor
@@ -1,36 +1,42 @@
 ﻿@page "/AddToDoItem"
 @inherits AddToDoItemBase
 
-<div class="card">
-    <div class="card-header">
-        <h3>Add new TODO Item</h3>
-    </div>
-    <div class="card-body d-flex flex-column gap-3">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <BootstrapInput type="text" class="form-control" PlaceHolder="Name" id="name" @bind-Value="name" />
+<EditForm Model="@payload" OnValidSubmit="@AddNewToDO">
+    <DataAnnotationsValidator />
+    <div class="card">
+        <div class="card-header">
+            <h3>Add new TODO Item</h3>
         </div>
-        <div class="form-group">
-            <label for="description">Description</label>
-            <Textarea id="description" class="form-control" placeholder="Description" rows="2" @bind-Value="description" />
-        </div>
-        <div class="form-group d-flex flex-column gap-2">
-            <h5>Checkboxes</h5>
-            @foreach (var checkbox in checkboxes)
-            {
-                <label class="form-label">Description</label>
-                <div class="d-flex flex-row gap-2">
-                    <input class="form-control w-50" type="text" @bind="@checkbox.Description" />
-                    <button class="btn btn-danger btn-sm" @onclick="() => RemoveCheckbox(checkbox)">Remove</button>
+        <div class="card-body d-flex flex-column gap-3 mb-1">
+            <div class="form-group">
+                <label class="mb-1" for="@payload.Name">Name</label>
+                <InputText @bind-Value="payload.Name" class="form-control" />
+                <ValidationMessage For="@(() => payload.Name)" />
+            </div>
+            <div class="form-group">
+                <label class="mb-1" for="@payload.Description">Description</label>
+                <InputText @bind-Value="payload.Description" class="form-control" />
+                <ValidationMessage For="@(() => payload.Description)" />
+            </div>
+            <div class="form-group d-flex flex-column gap-2">
+                <h5>Checkboxes</h5>
+                @foreach (var checkbox in checkboxes)
+                {
+                    <label class="form-label">Description</label>
+                    <div class="d-flex flex-row gap-2">
+                        <input class="form-control w-50" type="text" @bind="@checkbox.Description" />
+                        <button class="btn btn-danger btn-sm" @onclick="() => RemoveCheckbox(checkbox)">Remove</button>
+                    </div>
+                }
+                <div>
+                    <button class="btn btn-secondary btn-sm mt-2" @onclick="AddCheckbox">Add Checkbox</button>
                 </div>
-            }
-            <div>
-                <button class="btn btn-secondary btn-sm mt-2" @onclick="AddCheckbox">Add Checkbox</button>
             </div>
         </div>
+
+        <div class="card-footer">
+            <button type="submit" class="btn btn-primary">Add TODO</button>
+            <a href="#" class="btn btn-success">Back</a>
+        </div>
     </div>
-    <div class="card-footer">
-        <button class="btn btn-primary" @onclick="AddNewToDO">Add TODO</button>
-        <a href="#" class="btn btn-success">Back</a>
-    </div>
-</div>
+</EditForm>
