--- a/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
+++ b/ToDo.Web/Pages/ToDoItemPages/EditToDoItem.razor
@@ -1,34 +1,49 @@
 ﻿@page "/EditToDoItem/{Id:int}"
 @inherits EditToDoItemBase
 
-<div class="card">
-    <div class="card-header">
-        <h3>Edit TODO Item</h3>
-    </div>
-    <div class="card-body d-flex flex-column gap-3">
-        <div class="form-group">
-            <label for="name">Name</label>
-            <BootstrapInput type="text" class="form-control" PlaceHolder="Name" id="name" @bind-Value="name" />
+<EditForm Model="@payload" OnValidSubmit="@SaveToDo">
+    <DataAnnotationsValidator />
+    <div class="card">
+        <div class="card-header">
+            <h3>Edit TODO Item</h3>
         </div>
-        <div class="form-group">
-            <label for="description">Description</label>
-            <Textarea id="description" class="form-control" placeholder="Description" rows="2" @bind-Value="description" />
-        </div>
-        <div>
-            <button class="btn btn-secondary btn-sm mt-2" @onclick="AddCheckbox">Add Checkbox</button>
-        </div>
-        @foreach (var checkbox in checkboxes)
-        {
-            <label class="form-label m-0">Checkbox #</label>
-            <div class="d-flex flex-row">
-                <input class="form-check-inline" type="checkbox" checked="@checkbox.IsChecked" />
-                <input class="form-control w-25" type="text" @bind="@checkbox.Description" />
-                <button class="btn btn-danger btn-sm" @onclick="() => RemoveCheckbox(checkbox)">Remove</button>
+        <div class="card-body d-flex flex-column">
+            <div class="form-group mb-2">
+                <label class="mb-1" for="@payload.Name">Name</label>
+                <InputText @bind-Value="payload.Name" class="form-control" />
+                <ValidationMessage For="@(() => payload.Name)" />
             </div>
-        }
+            <div class="form-group mb-2">
+                <label for="@payload.Description" class="mb-1">Description</label>
+                <InputText @bind-Value="payload.Description" class="form-control" />
+                <ValidationMessage For="@(() => payload.Description)" />
+            </div>
+            <div class="mb-2">
+                <button class="btn btn-secondary btn-sm mt-2" @onclick="AddCheckbox" type="button">Add Checkbox</button>
+            </div>
+            @if(payload.Checkboxes != null)
+            {
+                foreach (var checkbox in payload.Checkboxes)
+                {
+                    <label class="form-label m-0 my-2 mt-3">Checkbox #</label>
+                    <div class="d-flex flex-row" style="margin-left:0.5rem;">
+                        <input class="form-check-inline" type="checkbox" checked="@checkbox.IsChecked" />
+                        <InputText @bind-Value="checkbox.Description" class="form-control" />
+                        <button class="btn btn-danger btn-sm mx-2" @onclick="() => RemoveCheckbox(checkbox)">Remove</button>
+                    </div>
+                    @if (checkbox.ValidationResults != null)
+                    {
+                        foreach (var validationResult in checkbox.ValidationResults)
+                        {
+                            <div class="validation-message" style="margin-left:2.25rem;">@validationResult.ErrorMessage</div>
+                        }
+                    }
+                }
+            }
+        </div>
+        <div class="card-footer">
+            <button class="btn btn-primary" type="submit">Save</button>
+            <a class="btn btn-secondary" href="/">Back</a>
+        </div>
     </div>
-    <div class="card-footer">
-        <button class="btn btn-primary" @onclick="SaveToDo">Save</button>
-        <a class="btn btn-secondary" href="/">Back</a>
-    </div>
-</div>
+</EditForm>
